[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/Timeless-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Overview.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SemesterOverview.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Theme" id=8]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 3 )
HScrollBar/styles/grabber_highlight = SubResource( 4 )
HScrollBar/styles/grabber_pressed = SubResource( 5 )
HScrollBar/styles/scroll = SubResource( 6 )
HScrollBar/styles/scroll_focus = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.129412, 0.45098, 0.376471, 1 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[node name="Overview" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSemester" type="Button" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Add Semester"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 75.0
margin_right = 300.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Grade Overview"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -322.0
margin_right = 275.0
margin_bottom = 498.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Semesters" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 550.0
margin_bottom = 750.0
theme = SubResource( 8 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SemestersContainer" type="HBoxContainer" parent="VBoxContainer/Semesters"]
margin_right = 550.0
margin_bottom = 750.0
custom_constants/separation = 50

[node name="SemesterOverview" parent="VBoxContainer/Semesters/SemestersContainer" instance=ExtResource( 3 )]

[node name="CGPA" type="Panel" parent="VBoxContainer"]
margin_top = 760.0
margin_right = 550.0
margin_bottom = 820.0
rect_min_size = Vector2( 550, 60 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CGPA"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -25.0
margin_right = 270.0
margin_bottom = 25.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CGPALabel" type="Panel" parent="VBoxContainer/CGPA/HBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/CGPA/HBoxContainer/CGPALabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -25.0
margin_right = 200.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cumulative Grade Point Average"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CGPA" type="Panel" parent="VBoxContainer/CGPA/HBoxContainer"]
margin_left = 410.0
margin_right = 540.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer/CGPA/HBoxContainer/CGPA"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -25.0
margin_right = 60.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4.330"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
